deployments/k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-mysql-deployment
  labels:
    app: k8s-demo-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-mysql
  template:
    metadata:
      name: k8s-demo-mysql
      labels:
        app: k8s-demo-mysql
    spec:
      containers:
        - name: k8s-demo-mysql
          image: mysql:8.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            # PVC persistent volume claim，声明需要什么样的资源
            claimName: k8s-demo-mysql-pvc
