deployments/k8s/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
spec:
  selector:
    app: k8s-demo
  ports:
    - name: http
      protocol: TCP
      port: 199
      targetPort: 8082
  type: ClusterIP
