deployments/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-mysql-service
spec:
  selector:
    app: k8s-demo-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
      nodePort: 30002
  type: NodePort
