deployments/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-redis-service
spec:
  selector:
    app: k8s-demo-redis
  ports:
    - protocol: TCP
      # k8s 内部访问接口
      port: 6379
      # 外部访问端口，必须在 30000-32767
      nodePort: 31379
      # pod 暴露的端口
      targetPort: 6379
  type: NodePort
